--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -477,6 +477,10 @@
     <Compile Include="Migrations\201703021146527_ProductAttributeOptionsSet.Designer.cs">
       <DependentUpon>201703021146527_ProductAttributeOptionsSet.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703161013248_FacetTemplateHint.cs" />
+    <Compile Include="Migrations\201703161013248_FacetTemplateHint.Designer.cs">
+      <DependentUpon>201703161013248_FacetTemplateHint.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -870,6 +874,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703021146527_ProductAttributeOptionsSet.resx">
       <DependentUpon>201703021146527_ProductAttributeOptionsSet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703161013248_FacetTemplateHint.resx">
+      <DependentUpon>201703161013248_FacetTemplateHint.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
