Theming: IBreadcrumb interface and a shared breadcrumb template replace all utterly cluttered breadcrumb models and templates

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -316,6 +316,7 @@
     <Compile Include="UI\Components\Window\WindowRenderer.cs" />
     <Compile Include="UI\Components\Window\WindowBuilder.cs" />
     <Compile Include="UI\Components\Window\Window.cs" />
+    <Compile Include="UI\Breadcrumb.cs" />
     <Compile Include="UI\IWidgetProvider.cs" />
     <Compile Include="UI\IWidgetSelector.cs" />
     <Compile Include="UI\BundleBuilder.cs" />
