Search: Testing filters for linq search. HitCount cannot be a criteria whether to render a filter or not.

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -490,6 +490,7 @@
     <Compile Include="Hooks\AclEntityHook.cs" />
     <Compile Include="ScopedServiceBase.cs" />
     <Compile Include="Search\CatalogSearchQuery.cs" />
+    <Compile Include="Search\Extensions\FacetUtility.cs" />
     <Compile Include="Search\Extensions\UrlHelperExtensions.cs" />
     <Compile Include="Search\Modelling\CatalogSearchQueryAliasMapper.cs" />
     <Compile Include="Search\Modelling\CatalogSearchQueryFactory.cs" />
