--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -397,6 +397,7 @@
     <Compile Include="Validators\Polls\PollAnswerValidator.cs" />
     <Compile Include="Validators\Polls\PollValidator.cs" />
     <Compile Include="Validators\Settings\GeneralCommonSettingsValidator.cs" />
+    <Compile Include="Validators\Settings\CatalogSettingsValidator.cs" />
     <Compile Include="Validators\Settings\OrderSettingsValidator.cs" />
     <Compile Include="Validators\Settings\SearchSettingValidator.cs" />
     <Compile Include="Validators\Settings\SettingValidator.cs" />
