--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -481,6 +481,10 @@
     <Compile Include="Migrations\201703161013248_FacetTemplateHint.Designer.cs">
       <DependentUpon>201703161013248_FacetTemplateHint.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704021515343_SpecificationAttributeAllowFiltering.cs" />
+    <Compile Include="Migrations\201704021515343_SpecificationAttributeAllowFiltering.Designer.cs">
+      <DependentUpon>201704021515343_SpecificationAttributeAllowFiltering.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -877,6 +881,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703161013248_FacetTemplateHint.resx">
       <DependentUpon>201703161013248_FacetTemplateHint.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704021515343_SpecificationAttributeAllowFiltering.resx">
+      <DependentUpon>201704021515343_SpecificationAttributeAllowFiltering.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
