--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -172,6 +172,12 @@
     </Compile>
     <Compile Include="Catalog\Importer\CategoryImporter.cs" />
     <Compile Include="Catalog\Importer\ProductImporter.cs" />
+    <Compile Include="Catalog\Modelling\IProductVariantQueryFactory.cs" />
+    <Compile Include="Catalog\Modelling\ProductVariantQuery.cs" />
+    <Compile Include="Catalog\Modelling\ProductVariantQueryExtensions.cs" />
+    <Compile Include="Catalog\Modelling\ProductVariantQueryFactory.cs" />
+    <Compile Include="Catalog\Modelling\ProductVariantQueryItem.cs" />
+    <Compile Include="Catalog\Modelling\ProductVariantQueryModelBinder.cs" />
     <Compile Include="Catalog\PriceCalculationContext.cs" />
     <Compile Include="Common\IUserAgent.cs" />
     <Compile Include="Common\TempFileCleanupTask.cs" />
