--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -172,6 +172,7 @@
     </Compile>
     <Compile Include="Catalog\Importer\CategoryImporter.cs" />
     <Compile Include="Catalog\Importer\ProductImporter.cs" />
+    <Compile Include="Catalog\Modelling\GiftCardQueryItem.cs" />
     <Compile Include="Catalog\Modelling\IProductVariantQueryFactory.cs" />
     <Compile Include="Catalog\Modelling\ProductVariantQuery.cs" />
     <Compile Include="Catalog\Modelling\ProductVariantQueryExtensions.cs" />
@@ -360,7 +361,6 @@
     <Compile Include="Directory\DeliveryTimeService.cs" />
     <Compile Include="Events\EventPublisher.cs" />
     <Compile Include="Events\DefaultConsumerFactory.cs" />
-    <Compile Include="Extensions\NameValueCollectionExtensions.cs" />
     <Compile Include="Forums\ForumExtensions.cs" />
     <Compile Include="ICommonServices.cs" />
     <Compile Include="Hooks\LocalizedEntityHook.cs" />
