--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -172,6 +172,7 @@
     </Compile>
     <Compile Include="Catalog\Importer\CategoryImporter.cs" />
     <Compile Include="Catalog\Importer\ProductImporter.cs" />
+    <Compile Include="Catalog\Modelling\CheckoutAttributeQueryItem.cs" />
     <Compile Include="Catalog\Modelling\GiftCardQueryItem.cs" />
     <Compile Include="Catalog\Modelling\IProductVariantQueryFactory.cs" />
     <Compile Include="Catalog\Modelling\ProductVariantQuery.cs" />
