--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1856,6 +1856,7 @@
     <Content Include="Views\Catalog\Partials\CatalogMenu.cshtml" />
     <Content Include="Views\Catalog\Partials\CatalogMenu.Navbar.cshtml" />
     <Content Include="Views\Shared\Layouts\_MyAccount.cshtml" />
+    <Content Include="Views\Catalog\Partials\HomepageManufacturers.cshtml" />
     <None Include="Web.EFMigrations.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
