--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -2,12 +2,36 @@
 <Theme title="Flex" supportRTL="false" previewText="'Flex' default theme" author="SmartStore AG" version="1.0">
 
   <Vars>
+    <!-- Common colors -->
+    <Var name="gray-dark" type="Color">#292b2c</Var>
+    <Var name="gray" type="Color">#464a4c</Var>
+    <Var name="gray-light" type="Color">#999</Var>
+    <Var name="gray-lighter" type="Color">#eceeef</Var>
+    <Var name="gray-lightest" type="Color">#f7f7f9</Var>
+
+    <Var name="red" type="Color">#f44336</Var>
+    <Var name="orange" type="Color">#ff9800</Var>
+    <Var name="yellow" type="Color">#ffeb3b</Var>
+    <Var name="green" type="Color">#4caf50</Var>
+    <Var name="blue" type="Color">#0275d8</Var>
+    <Var name="bluegrey" type="Color">#78909c</Var>
+    <Var name="indigo" type="Color">#3f51b5</Var>
+    <Var name="teal" type="Color">#009688</Var>
+    <Var name="pink" type="Color">#ff5b77</Var>
+    <Var name="purple" type="Color">#9c27b0</Var>
+
     <!-- Brand Colors -->
-    <Var name="brand-primary" type="Color">#3f51b5</Var>
-    <Var name="brand-warning" type="Color">#ff9800</Var>
-    <Var name="brand-danger" type="Color">#f44336</Var>
-    <Var name="brand-info" type="Color">#5bc0de</Var>
-    <Var name="brand-success" type="Color">#5cb85c</Var>
+    <Var name="brand-primary" type="Color">$indigo</Var>
+    <Var name="brand-warning" type="Color">$orange</Var>
+    <Var name="brand-danger" type="Color">$red</Var>
+    <Var name="brand-info" type="Color">$bluegrey</Var>
+    <Var name="brand-success" type="Color">$green</Var>
+    <Var name="brand-inverse" type="Color">$gray-dark</Var>
+    
+    <!-- Main site colors -->
+    <Var name="body-bg" type="Color">#fff</Var>
+    <Var name="body-color" type="Color">#333</Var>
+    <Var name="link-color" type="Color">#08c</Var>
     
     <!-- Common Colors -->
     <Var name="SiteBackground" type="Color">#eaf0f4</Var>
@@ -17,15 +41,23 @@
     <Var name="BoxBackground" type="Color">#fff</Var>
     
     <!-- Common Font -->
-    <Var name="GoogleFont1" type="String" isnew="1">Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic</Var>
-    <Var name="GoogleFont2" type="String" isnew="1"></Var>
-    <Var name="GoogleFont3" type="String" isnew="1"></Var>
-    <Var name="SansFontFamily" type="String">Helvetica, Arial, 'sans-serif'</Var>
-    <Var name="SerifFontFamily" type="String">Georgia, 'Times New Roman', Times, serif</Var>
-    <Var name="MonoFontFamily" type="String">Menlo, Monaco, Consolas, 'Courier New', monospace</Var>
-    <Var name="BaseFontSize" type="String">14px</Var>
-    <Var name="BaseLineHeight" type="String">20px</Var>
+    <!-- e.g.: Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic -->
+    <Var name="google-font-1" type="String"></Var>
+    <Var name="google-font-2" type="String"></Var>
+    <Var name="google-font-3" type="String"></Var>
     
+    <Var name="font-family-sans-serif" type="String">-apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif</Var>
+    <Var name="font-family-monospace" type="String">Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace</Var>
+    <Var name="font-size-base" type="String">0.875rem</Var>
+    <Var name="font-size-lg" type="String">1rem</Var>
+    <Var name="font-size-sm" type="String">0.8125rem</Var>
+    <Var name="font-size-xs" type="String">0.75rem</Var>
+
+    <Var name="font-weight-light" type="String">300</Var>
+    <Var name="font-weight-normal" type="String">normal</Var>
+    <Var name="font-weight-medium" type="String">600</Var>
+    <Var name="font-weight-bold" type="String">bold</Var>
+
     <!-- Common Headings -->
     <Var name="HeadingsFontFamily" type="String">'Segoe UI Semibold', 'Segoe UI', Tahoma, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'</Var>
     <Var name="HeadingsFontWeight" type="String">600</Var>
@@ -58,7 +90,8 @@
     <Var name="shopbar-label" type="Select#shopbar-labels">warning</Var>
     
     <!-- Megamenu -->
-    <Var name="InverseNavbar" type="Boolean">false</Var>
+    <Var name="inverse-navbar" type="Boolean">false</Var>
+    <Var name="mm-bg" type="Color">$gray-lightest</Var>
     <Var name="NavbarHeight" type="String">38px</Var>
     <Var name="NavbarBackgroundHighlight" type="Color">#fff</Var>
     
