Theming changed some variable names

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -91,7 +91,7 @@
     
     <!-- Megamenu -->
     <Var name="inverse-navbar" type="Boolean">false</Var>
-    <Var name="mm-bg" type="Color">$gray-lightest</Var>
+    <Var name="megamenu-bg" type="Color">$gray-lightest</Var>
     <Var name="NavbarHeight" type="String">38px</Var>
     <Var name="NavbarBackgroundHighlight" type="Color">#fff</Var>
     
