Theming: more theme variables work

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -58,6 +58,9 @@
     <Var name="font-weight-medium" type="String">600</Var>
     <Var name="font-weight-bold" type="String">bold</Var>
 
+    <Var name="headings-font-weight" type="String">600</Var>
+    <Var name="lead-font-weight" type="String">300</Var>
+
     <!-- Common Headings -->
     <Var name="HeadingsFontFamily" type="String">'Segoe UI Semibold', 'Segoe UI', Tahoma, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'</Var>
     <Var name="HeadingsFontWeight" type="String">600</Var>
