--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -58,13 +58,13 @@
     <Var name="font-weight-medium" type="String">600</Var>
     <Var name="font-weight-bold" type="String">bold</Var>
 
-    <Var name="headings-font-weight" type="String">400</Var>
+    <!-- Headings -->
+    <Var name="headings-font-family" type="String">imherit</Var>
+    <Var name="headings-font-weight" type="String">600</Var>
+    <Var name="headings-line-height" type="String">1.2</Var>
+    <Var name="headings-color" type="String">inherit</Var>
     <Var name="lead-font-weight" type="String">300</Var>
-
-    <!-- Common Headings -->
-    <Var name="HeadingsFontFamily" type="String">'Segoe UI Semibold', 'Segoe UI', Tahoma, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'</Var>
-    <Var name="HeadingsFontWeight" type="String">600</Var>
-    <Var name="HeadingsColor" type="Color">inherit</Var>
+    
 
     <Var name="PageTitleFontFamily" type="String">'Segoe UI Light', 'Segoe UI', Arial, Helvetica, 'sans-serif'</Var>
     <Var name="PageTitleFontWeight" type="String">100</Var>
