Theming: variables for header (light vs. inverse)

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -31,6 +31,7 @@
     <!-- Main site colors -->
     <Var name="body-bg" type="Color">#fff</Var>
     <Var name="body-color" type="Color">#333</Var>
+    <Var name="text-muted" type="Color">#999</Var>
     <Var name="link-color" type="Color">#08c</Var>
     
     <!-- Common Colors -->
@@ -59,7 +60,7 @@
     <Var name="font-weight-bold" type="String">bold</Var>
 
     <!-- Headings -->
-    <Var name="headings-font-family" type="String">imherit</Var>
+    <Var name="headings-font-family" type="String">inherit</Var>
     <Var name="headings-font-weight" type="String">600</Var>
     <Var name="headings-line-height" type="String">1.2</Var>
     <Var name="headings-color" type="String">inherit</Var>
@@ -85,16 +86,22 @@
     <Var name="BtnDangerBackground" type="Color">#ee5f5b</Var>
     <Var name="BtnInverseBackground" type="Color">#444</Var>
     
-    <!-- Shopbar -->
+    <!-- Header -->
+    <Var name="header-bg" type="Color">transparent</Var>
+    <Var name="inverse-menubar" type="Boolean">false</Var>
+    <Var name="inverse-shopbar" type="Boolean">false</Var>
+    <Var name="inverse-navbar" type="Boolean">false</Var>
+    <Var name="menubar-bg" type="Color">transparent</Var>
+    <Var name="shopbar-bg" type="Color">transparent</Var>
+    <Var name="megamenu-bg" type="Color">$gray-lightest</Var>
+    <Var name="shopbar-label" type="Select#shopbar-labels">warning</Var>
+    
     <Var name="ShopBarBackgroundColor" type="Color">#fff</Var>
     <Var name="ShopBarBorderColor" type="Color">#abc2d1</Var>
     <Var name="ShopBarTextColor" type="Color">#696969</Var>
     <Var name="ShopBarIconColor" type="Color">#d2d2d2</Var>
-    <Var name="shopbar-label" type="Select#shopbar-labels">warning</Var>
     
     <!-- Megamenu -->
-    <Var name="inverse-navbar" type="Boolean">false</Var>
-    <Var name="megamenu-bg" type="Color">$gray-lightest</Var>
     <Var name="NavbarHeight" type="String">38px</Var>
     <Var name="NavbarBackgroundHighlight" type="Color">#fff</Var>
     
