Theming: implemented boxed layout

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -2,6 +2,10 @@
 <Theme title="Flex" supportRTL="false" previewText="'Flex' default theme" author="SmartStore AG" version="1.0">
 
   <Vars>
+    <!-- Layout -->
+    <Var name="boxed" type="Boolean">false</Var>
+    <Var name="site-bg" type="Color">#fff</Var>
+
     <!-- Common colors -->
     <Var name="gray-dark" type="Color">#292b2c</Var>
     <Var name="gray" type="Color">#464a4c</Var>
