Theming: variables for footer

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -2,10 +2,6 @@
 <Theme title="Flex" supportRTL="false" previewText="'Flex' default theme" author="SmartStore AG" version="1.0">
 
   <Vars>
-    <!-- Layout -->
-    <Var name="boxed" type="Boolean">false</Var>
-    <Var name="site-bg" type="Color">#fff</Var>
-
     <!-- Common colors -->
     <Var name="gray-dark" type="Color">#292b2c</Var>
     <Var name="gray" type="Color">#464a4c</Var>
@@ -32,11 +28,27 @@
     <Var name="brand-success" type="Color">$green</Var>
     <Var name="brand-inverse" type="Color">$gray-dark</Var>
     
+    <!-- Layout -->
+    <Var name="boxed" type="Boolean">false</Var>
+    <Var name="site-bg" type="Color">$gray-lightest</Var>
+    
     <!-- Main site colors -->
     <Var name="body-bg" type="Color">#fff</Var>
     <Var name="body-color" type="Color">#333</Var>
     <Var name="text-muted" type="Color">#999</Var>
     <Var name="link-color" type="Color">#08c</Var>
+    
+    <!-- Footer -->
+    <Var name="inverse-footer" type="Boolean">false</Var>
+    <Var name="footer-bg" type="Color">$gray-lightest</Var>
+    <Var name="footer-color" type="Color">$body-color</Var>
+    <Var name="footer-color-muted" type="Color">$text-muted</Var>
+    <Var name="footer-inverse-color" type="Color">#fff</Var>
+    <Var name="footer-inverse-color-muted" type="Color">rgba(#fff, 0.5)</Var>
+    <Var name="footer-social-bg" type="Color">#aaa</Var>
+    <Var name="footer-social-color" type="Color">#fff</Var>
+    
+    <Var name="FooterRadius" type="String">0 0 0 0</Var>
     
     <!-- Common Colors -->
     <Var name="SiteBackground" type="Color">#eaf0f4</Var>
@@ -133,13 +145,6 @@
     <Var name="ChooserBackgroundColor" type="Color">transparent</Var>
     <Var name="ChooserActiveStateColor" type="Color">#cfdde6</Var>
     <Var name="ChooserFontColor" type="Color">#888</Var>
-    
-    <!-- Footer -->
-    <Var name="FooterBackground" type="Color">#555</Var>
-    <Var name="FooterHeading" type="Color">#888</Var>
-    <Var name="FooterFontColor" type="Color">#888</Var>
-    <Var name="FooterLinkColor" type="Color">#aaa</Var>
-    <Var name="FooterRadius" type="String">0 0 0 0</Var>
 
     <!-- Container -->
     <Var name="ContainerRadius" type="String">3px</Var>
