--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -170,13 +170,14 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Compile Include="Catalog\Extensions\ProductUrlHelper.cs" />
     <Compile Include="Catalog\Importer\CategoryImporter.cs" />
     <Compile Include="Catalog\Importer\ProductImporter.cs" />
     <Compile Include="Catalog\Modelling\CheckoutAttributeQueryItem.cs" />
     <Compile Include="Catalog\Modelling\GiftCardQueryItem.cs" />
     <Compile Include="Catalog\Modelling\IProductVariantQueryFactory.cs" />
     <Compile Include="Catalog\Modelling\ProductVariantQuery.cs" />
-    <Compile Include="Catalog\Modelling\ProductVariantQueryExtensions.cs" />
+    <Compile Include="Catalog\Extensions\ProductVariantQueryExtensions.cs" />
     <Compile Include="Catalog\Modelling\ProductVariantQueryFactory.cs" />
     <Compile Include="Catalog\Modelling\ProductVariantQueryItem.cs" />
     <Compile Include="Catalog\Modelling\ProductVariantQueryModelBinder.cs" />
