Theming: cart (in progress)

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -36,7 +36,7 @@
     <Var name="body-bg" type="Color">#fff</Var>
     <Var name="body-color" type="Color">#333</Var>
     <Var name="text-muted" type="Color">#999</Var>
-    <Var name="link-color" type="Color">#08c</Var>
+    <Var name="link-color" type="Color">#0066c0</Var>
     
     <!-- Footer -->
     <Var name="inverse-footer" type="Boolean">false</Var>
