--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1861,6 +1861,7 @@
     <Content Include="Themes\Flex\Content\_variables-custom.scss" />
     <Content Include="Themes\Flex\Content\_user.scss" />
     <Content Include="Themes\Flex\Content\_custom.scss" />
+    <Content Include="Views\ShoppingCart\Partials\_CartItems.cshtml" />
     <None Include="Web.EFMigrations.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
