Theming: cart summary

--- a/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/theme.config
@@ -81,6 +81,9 @@
     <Var name="headings-line-height" type="String">1.2</Var>
     <Var name="headings-color" type="String">inherit</Var>
     <Var name="lead-font-weight" type="String">300</Var>
+
+    <!-- Cart -->
+    <Var name="cart-footer-bg" type="Color">$gray-lightest</Var>
     
 
     <Var name="PageTitleFontFamily" type="String">'Segoe UI Light', 'Segoe UI', Arial, Helvetica, 'sans-serif'</Var>
