Added some new categories and products to the installed demo shop

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -722,15 +722,28 @@
     <Content Include="Content\samples\acer-logo.jpg" />
     <Content Include="Content\samples\beethoven-fur-elise.mp3" />
     <Content Include="Content\samples\Beethoven.jpg" />
+    <Content Include="Content\samples\category_apple.png" />
+    <Content Include="Content\samples\category_basketball.png" />
     <Content Include="Content\samples\category_cellphone.png" />
+    <Content Include="Content\samples\category_chairs.png" />
     <Content Include="Content\samples\category_computers.png" />
     <Content Include="Content\samples\category_desktops.png" />
     <Content Include="Content\samples\category_digitaldownloads.jpg" />
+    <Content Include="Content\samples\category_digitalproducts.jpg" />
+    <Content Include="Content\samples\category_fashion.jpg" />
+    <Content Include="Content\samples\category_furniture.jpg" />
     <Content Include="Content\samples\category_games.png" />
     <Content Include="Content\samples\category_gaming.png" />
     <Content Include="Content\samples\category_gaming_accessories.png" />
     <Content Include="Content\samples\category_giftcards.png" />
+    <Content Include="Content\samples\category_golf.jpg" />
+    <Content Include="Content\samples\category_lamps.png" />
+    <Content Include="Content\samples\category_lounger.jpg" />
     <Content Include="Content\samples\category_notebooks.png" />
+    <Content Include="Content\samples\category_soccer.png" />
+    <Content Include="Content\samples\category_sofas.jpg" />
+    <Content Include="Content\samples\category_sports.jpg" />
+    <Content Include="Content\samples\category_sunglasses.jpg" />
     <Content Include="Content\samples\category_watches.png" />
     <Content Include="Content\samples\clouds.png" />
     <Content Include="Content\samples\company_logo.png" />
@@ -752,24 +765,51 @@
     <Content Include="Content\samples\manufacturer-trekstor.png" />
     <Content Include="Content\samples\manufacturer-westerndigital.png" />
     <Content Include="Content\samples\manufacturer_apple.png" />
+    <Content Include="Content\samples\manufacturer_ray-ban.jpg" />
     <Content Include="Content\samples\manufacturer_festina.png" />
+    <Content Include="Content\samples\manufacturer_oakley.png" />
     <Content Include="Content\samples\manufacturer_sony.png" />
     <Content Include="Content\samples\manufacturer_ubisoft.png" />
     <Content Include="Content\samples\music.png" />
     <Content Include="Content\samples\packshot-net.png" />
+    <Content Include="Content\samples\productCustomFlakSunglasses_black_white.jpg" />
+    <Content Include="Content\samples\products_airpods_gold.jpg" />
+    <Content Include="Content\samples\products_airpods_lightblue.jpg" />
+    <Content Include="Content\samples\products_airpods_mint.jpg" />
+    <Content Include="Content\samples\products_airpods_rose.jpg" />
+    <Content Include="Content\samples\products_airpods_turquoise.jpg" />
+    <Content Include="Content\samples\products_airpods_white.jpg" />
     <Content Include="Content\samples\product_aceraspiresl1500.png" />
     <Content Include="Content\samples\product_bestgrillingrecipes.jpg" />
     <Content Include="Content\samples\product_certina_ds_podium_big.png" />
     <Content Include="Content\samples\product_cookingfortwo.jpg" />
+    <Content Include="Content\samples\product_CustomFlakSunglasses.jpg" />
     <Content Include="Content\samples\product_dellinspiron23.png" />
     <Content Include="Content\samples\product_giftcart.png" />
+    <Content Include="Content\samples\product_ipad_1.jpg" />
+    <Content Include="Content\samples\product_ipad_2.jpg" />
+    <Content Include="Content\samples\product_iphoneplus_1.jpg" />
+    <Content Include="Content\samples\product_iphoneplus_2.jpg" />
     <Content Include="Content\samples\product_playstation3dualshock3.png" />
+    <Content Include="Content\samples\product_productOriginalWayfarer_1.jpg" />
+    <Content Include="Content\samples\product_productOriginalWayfarer_2.jpg" />
+    <Content Include="Content\samples\product_productOriginalWayfarer_3.jpg" />
+    <Content Include="Content\samples\product_productOriginalWayfarer_4.jpg" />
+    <Content Include="Content\samples\product_productOriginalWayfarer_5.jpg" />
+    <Content Include="Content\samples\product_productOriginalWayfarer_6.jpg" />
+    <Content Include="Content\samples\product_radar_ev_prizm.jpg" />
+    <Content Include="Content\samples\product_RayBanTopBar_1.jpg" />
+    <Content Include="Content\samples\product_RayBanTopBar_2.jpg" />
+    <Content Include="Content\samples\product_RayBanTopBar_3.jpg" />
     <Content Include="Content\samples\product_sony_dualshock4_wirelesscontroller.png" />
     <Content Include="Content\samples\product_sony_ps3_black.png" />
     <Content Include="Content\samples\product_sony_ps3_plus_game.png" />
     <Content Include="Content\samples\product_sony_ps4.png" />
     <Content Include="Content\samples\product_sony_ps4_bundle.png" />
     <Content Include="Content\samples\product_sony_ps4_camera.png" />
+    <Content Include="Content\samples\product_ultimate-apple-pro-hipster-bundle.jpg" />
+    <Content Include="Content\samples\product_watchseries2_1.jpg" />
+    <Content Include="Content\samples\product_watchseries2_2.jpg" />
     <Content Include="Content\samples\sony-ps3-white.jpg" />
     <Content Include="Content\samples\sony-PS3AssassinsCreedBundle.png" />
     <Content Include="Content\samples\ubisoft-assassins-creed-3.jpg" />
